--- a/views/admin/salesReport.ejs
+++ b/views/admin/salesReport.ejs
@@ -35,7 +35,7 @@
 
   <section>
 
-    <div class="w-fullmt-5">
+    <div class="w-full mt-5">
       <table class="items-center bg-transparent w-full border-collapse ">
         <thead>
           <tr>
@@ -60,17 +60,17 @@
          <%= index + 1 %>
           </td>
           <td class="border border-gray-400 px-6 align-center border-l-0 border-r-0 text-xs whitespace-nowrap p-4">
-          <%= order.products[0].productName %>
+          <%= order.productName %>
           </td>
           <td class="border border-gray-400 px-6 align-middle border-l-0 border-r-0 text-xs whitespace-nowrap p-4">
           <i class=" text-emerald-500 mr-4"></i>
-          <%= order.products[0].price %>
+          <%= order.price %>
           </td>
-          <% if(order.products[0].offer[0]){ %>
+          <% if(order.offer[0]){ %>
           
           <td class="border border-gray-400 px-6 align-middle border-l-0 border-r-0 text-xs whitespace-nowrap p-4">
           <i class=" text-emerald-500 mr-4"></i>
-          <%= order.products[0].offer[0].offerPrice %>
+          <%= order.offer[0].offerPrice %>
           </td>
           <% }else{ %>
             <td class="border border-gray-400 px-6 align-middle border-l-0 border-r-0 text-xs whitespace-nowrap p-4">
@@ -84,7 +84,7 @@
           </td>
           <td class="border border-gray-400 px-6 align-middle border-l-0 border-r-0 text-xs whitespace-nowrap p-4">
           <i class=" text-emerald-500 mr-4"></i>
-          <%= order.count * order.products[0].price %>
+          <%= order.count * order.price %>
           </td>
           
           </tr>
@@ -100,7 +100,7 @@
 
 
 </section>
-<section>
+<section class="mb-12">
   <div class="flex flex-col items-end mt-12 mr-5">
     <span class="font-bold">Total Offer : 21100₹</span>
     <span class="font-bold">Total Discount : 6000₹</span>
