home page UI modified

--- a/views/user/home.ejs
+++ b/views/user/home.ejs
@@ -193,8 +193,8 @@
 
   <section class="mt-48 w-full h-72 bg-stone-200 text-center py-28">
      <% products.slice(0, 5).forEach((product) => { %>
-         <span class="text-xl font-bold px-32"> <%= product.brand %></span>
-     <% }) %>
+      <span class="text-xl font-bold px-32 hover:text-violet-800"><%= product.brand %></span>
+      <% }) %>
   </section>
 
 <section class=" h-14 text-center mt-16 p-4 justify-center flex">
