--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -193,12 +193,12 @@ initTWE({ Dropdown, Ripple });
           </span>
         </button>
              </div>
-                  <a href="/home" class="text-gray-800 hover:text-cyan-300 line px-3 py-2 text-xs my-5 font-thin">Home</a>
-                  <a href="/shopping" class="text-gray-800 hover:text-cyan-300 line px-3 py-2 text-xs my-5 font-thin">Shopping</a>
-                  <a href="/wishlist" class="text-gray-800 hover:text-cyan-300 line px-3 py-2 text-xs my-5 font-thin">Wishlist</a>
-                  <a href="/cart" class="text-gray-800 hover:text-cyan-300 px-3 py-2 text-xs my-5 font-thin">Cart</a>
-                  <a href="/userProfile" class="text-gray-800 hover:text-cyan-300 px-3 py-2 text-xs my-5 font-thin">My Account</a>
-                  <a href="/logout" class="text-gray-800 hover:text-red-500 px-3 py-2 text-xs my-5 font-thin">Logout</a>
+                    <a href="/home" class="relative inline-block px-3 py-2 text-xs my-5 font-thin group"><span class="absolute inset-0 bg-gray-500 transform scale-y-0 origin-bottom transition-transform duration-300 group-hover:scale-y-100 hover:text-white pt-2 pl-3">Home</span> <span>Home</span></a>
+                    <a href="/shopping" class="relative inline-block px-3 py-2 text-xs my-5 font-thin group"><span class="absolute inset-0 bg-gray-500 transform scale-y-0 origin-bottom transition-transform duration-300 group-hover:scale-y-100 hover:text-white pt-2 pl-3">Shopping</span> <span>Shopping</span></a>
+                    <a href="/wishlist" class="relative inline-block px-3 py-2 text-xs my-5 font-thin group"><span class="absolute inset-0 bg-gray-500 transform scale-y-0 origin-bottom transition-transform duration-300 group-hover:scale-y-100 hover:text-white pt-2 pl-3">Wishlist</span> <span>Wishlist</span></a>
+                    <a href="/cart" class="relative inline-block px-3 py-2 text-xs my-5 font-thin group"><span class="absolute inset-0 bg-gray-500 transform scale-y-0 origin-bottom transition-transform duration-300 group-hover:scale-y-100 hover:text-white pt-2 pl-3">Cart</span> <span>Cart</span></a>
+                    <a href="/userProfile" class="relative inline-block px-3 py-2 text-xs my-5 font-thin group"><span class="absolute inset-0 bg-gray-500 transform scale-y-0 origin-bottom transition-transform duration-300 group-hover:scale-y-100 hover:text-white pt-2 pl-3">My Account</span> <span>My Account</span></a>
+                    <a href="/logout" class="relative inline-block px-3 py-2 text-xs my-5 font-thin group"><span class="absolute inset-0 bg-gray-500 transform scale-y-0 origin-bottom transition-transform duration-300 group-hover:scale-y-100 hover:text-white pt-2 pl-3"> Logout</span> <span>Logout</span></a>
                 </div>
               </div>
           <!-- Profile dropdown -->
