--- a/views/user/signup.ejs
+++ b/views/user/signup.ejs
@@ -8,7 +8,7 @@
     <script src="https://cdn.tailwindcss.com"></script>     
 </head>
 <body>
-<div class="flex min-h-full flex-col justify-center px-6 lg:px-8">
+<div class="flex min-h-full flex-col justify-center px-6 lg:px-8 ">
   <div class="sm:mx-auto sm:w-full sm:max-w-sm">
     <!-- Logo for later -->
     <!-- <div class="text-center font-mono text-3xl font-bold">
@@ -28,7 +28,7 @@
   </script>
 <div id="errossr"></div>
 
-  <div class="px-16 py-10 mt-5 sm:mx-auto sm:w-full sm:max-w-sm bg-gray-200 shadow-xl">
+  <div class="px-16 py-10 mt-5 sm:mx-auto sm:w-full sm:max-w-sm bg-gray-200 shadow-md shadow-gray-700">
     <form id="form" class="space-y-6" method="post" action="/signup" >
 
       <div>
