--- a/views/admin/admin-login.ejs
+++ b/views/admin/admin-login.ejs
@@ -76,44 +76,36 @@
 
 <body>
 
-<div class="flex min-h-full flex-col justify-center px-6 py-12 lg:px-8">
+<div class="flex max-h-full flex-col justify-center px-6 py-12 lg:px-8 ">
 
-  <div class="sm:mx-auto sm:w-full sm:max-w-sm">
-    <!-- Logo if wanted -->
-    <!-- <div class="text-center font-mono text-3xl font-bold">
-        <span class="mx-auto h-10 w-auto">OneCart</span>
-    </div> -->
-    <h2 class="mt-10 text-center text-2xl font-bold leading-9 tracking-tight text-gray-900">Sign in to your account</h2>
-  </div>
-
-  <div class="p-16 mt-10 sm:mx-auto sm:w-full sm:max-w-sm border-2 border-gray-300 bg-slate-100">
-    <form class="space-y-6" action="./admin-login" method="POST">
-      <div>
-        <label for="userName" class="block text-sm font-medium leading-6 text-gray-900">Username </label>
-        <div class="mt-2">
-          <input id="userName" name="userName" type="userName" autocomplete="userName" required class="block w-full border-0 py-1 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+    <div class="p-12 mt-20 sm:mx-auto sm:w-full sm:max-w-sm bg-gray-300 shadow-md shadow-gray-500">
+      <h2 class="mt-2 text-center text-2xl font-bold leading-9 tracking-tight text-gray-900">Sign in to your account</h2>
+    
+      <form class="space-y-6 mt-16" action="./admin-login" method="POST">
+        <div class="pt-6">
+          <label for="userName" class="block text-sm font-medium leading-6 text-gray-900">Username </label>
+          <div class="mt-2 border border-gray-500">
+            <input id="userName" name="userName" type="userName" autocomplete="userName" required class="block w-full border-0 py-1 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+          </div>
         </div>
-      </div>
-
-      <div>
-        <div class="flex items-center justify-between">
-          <label for="password" class="block text-sm font-medium leading-6 text-gray-900">Password</label>
-
+  
+        <div class="pt-6">
+          <div class="flex items-center justify-between">
+            <label for="password" class="block text-sm font-medium leading-6 text-gray-900">Password</label>
+          </div>
+          <div class="mt-2 border border-gray-500">
+            <input id="password" name="password" type="password" autocomplete="current-password" required class="block w-full border-0 py-1 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+          </div>
         </div>
-        <div class="mt-2">
-          <input id="password" name="password" type="password" autocomplete="current-password" required class="block w-full border-0 py-1 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+  
+        <div class="flex">
+          <button type="submit" class="flex w-24 justify-center bg-yellow-500 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-sky-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600 rounded-full">Sign in</button>
+  
         </div>
-      </div>
-
-      <div class="flex">
-        <button type="submit" class="flex w-24 justify-center bg-yellow-500 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600 rounded-full">Sign in</button>
-
-      </div>
-    </form>
-
-   
-  </div>
-
+      </form>
+  
+     
+    </div>
 
    </main>
    
