--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -39,7 +39,7 @@
     <h2 class="mt-10 text-center text-2xl font-bold leading-9 tracking-tight text-gray-900">Sign in to your account</h2>
   </div>
 
-  <div class="p-16 mt-10 sm:mx-auto sm:w-full sm:max-w-sm bg-gray-200 shadow-xl">
+  <div class="p-16 mt-10 sm:mx-auto sm:w-full sm:max-w-sm bg-gray-200 shadow-md shadow-gray-700">
     <form class="space-y-6" method="post">
       <div>
         <label for="email" class="block text-sm font-medium leading-6 text-gray-900">Email</label>
@@ -68,7 +68,9 @@
         <button type="submit" class="flex rounded-full w-11 justify-center bg-green-700 px-3 py-1.5 text-xs font-semibold leading-6 text-white shadow-sm hover:bg-lime-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600 ">Google</button>
       </div> 
     </form> -->
-    <button class="text-blue-600"><a href="/auth/google"> Google </a> </button>
+
+
+    <!-- <button class="text-blue-600"><a href="/auth/google"> Google </a> </button> -->
 
     <p class="mt-5 text-center text-sm text-gray-500">
       Not a member?
