--- a/views/user/wishlist.ejs
+++ b/views/user/wishlist.ejs
@@ -97,10 +97,35 @@ const removeCart = (productId) => {
         productId : productId
     })
    }).then(() => {
-    window.location.href = '/wishlist?message=Removed successfully&type=success'
+    window.location.href = '/wishlist?message=Removed Product successfully&type=success'
    })
 }
 
+</script>
+<script>
+    function parseQueryParams() {
+        var queryParams = {};
+        var queryString = window.location.search.substring(1);
+        var params = queryString.split("&");
+        for (var i = 0; i < params.length; i++) {
+            var pair = params[i].split("=");
+            queryParams[decodeURIComponent(pair[0])] = decodeURIComponent(pair[1]);
+        }
+        return queryParams;
+    }
+
+    document.addEventListener('DOMContentLoaded', function() {
+        var queryParams = parseQueryParams();
+        var message = queryParams['message'];
+        var type = queryParams['type'];
+        if (message) {
+            if (type === 'success') {
+                toastr.success(message);
+            } else if (type === 'error') {
+                toastr.error(message);
+            }
+        }
+    });
 </script>
 
 <%- include('../partials/footer') %>
