downloading pdf and excel sales

--- a/views/partials/adminHeader.ejs
+++ b/views/partials/adminHeader.ejs
@@ -15,7 +15,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,300;0,400;1,600&display=swap" rel="stylesheet" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css" rel="stylesheet">
    
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.0/xlsx.full.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.2/html2pdf.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.5.3/jspdf.debug.js" integrity="sha384-NGB9XqFIl/+WnY/+/8ZTv3A4Jmz5W/+mDsRYgKO+/YeK5mRNkTK+AoTlqvQIWwW" crossorigin="anonymous"></script>
     <script src="path/to/jspdf.debug.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
