--- a/views/admin/salesReport.ejs
+++ b/views/admin/salesReport.ejs
@@ -1,6 +1,6 @@
 <%- include('../partials/adminHeader') %>
 
-<main>
+<main class="container_content">
 
         <!---------------- Sorting orders ---------------->
 <section class="flex flex-col justify-end items-end">
@@ -59,7 +59,7 @@
   <section>
 
     <div class="w-full mt-5">
-      <table class="items-center bg-transparent w-full border-collapse ">
+      <table class="items-center bg-transparent w-full border-collapse" id="mail">
         <thead>
           <tr>
            <th class="bg-stone-700 text-white align-middle border-t border-gray-500 py-3 text-xs uppercase whitespace-nowrap font-semibold text-left">
@@ -125,7 +125,11 @@
     </div>
   </div>
 </div>
-<button id="downloadPDF" class="mb-6 mt-8 text-white bg-red-700 hover:bg-blue-800  focus:ring-blue-300 font-thin text-sm sm:w-auto px-3 py-1 text-center">Download PDF</button>
+<div>
+  <button onclick="exportToPDF()" class="mb-6 mt-8 text-white bg-red-700 hover:bg-blue-800  focus:ring-blue-300 font-thin text-sm sm:w-auto px-3 py-1 text-center">Download PDF</button>
+  <button onclick="export_data()" class="mb-6 mt-8 text-white bg-blue-700 hover:bg-red-800  focus:ring-blue-300 font-thin text-sm sm:w-auto px-3 py-1 text-center">Download Exel</button>
+
+</div>
 </section>
 
 <section class="mb-20">
@@ -192,7 +196,33 @@
 tota.addEventListener('click',() => {
   alert(total)
 })
-    
-
+  
   </script>
+
+<script>
+function exportToPDF() {
+    const element = document.getElementById('mail');
+    const opt = {
+      margin: 10,
+      filename: 'sales_report.pdf',
+      image: { type: 'jpeg', quality: 0.98 },
+      html2canvas: { scale: 2 },
+      jsPDF: { unit: 'mm', format: 'a4', orientation: 'Landscape' },
+    };
+
+    html2pdf().from(element).set(opt).save();
+  }
+
+
+
+  function export_data() {
+    let data = document.getElementById('mail');
+    var fp = XLSX.utils.table_to_book(data, { sheet: 'SalesReport' });
+    XLSX.write(fp, {
+      bookType: 'xlsx',
+      type: 'base64'
+    });
+    XLSX.writeFile(fp, 'test.xlsx');
+    }
+</script>
 <%- include('../partials/adminFooter') %>
